samples/_failures_safe/1761492595_fe099d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd11404b.c: In function ‘main’:
./samples/SAFE/__tmp_bd11404b.c:172:5: error: expected expression at end of input
  172 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_bd11404b.c:172:5: error: expected declaration or statement at end of input
